# Tiny_Projects

./: .gitignore  .pre-commit-config.yaml  Checklist_nouveau_chapitre.md  README.md  Tiny_Projects.code-workspace  pyproject.toml  pyrightconfig.json  pytest.ini
01_hello/: Makefile  hello.py  test_hello.py
02_crowsnest/: Makefile  crowsnest.py  test_crowsnest.py
03_picnic/: Makefile  picnic.py  test_picnic.py
04_jump_the_five/: Makefile  README.md  jump.py  jump_jy.py  test_jump.py
05_howler/: Makefile  howler.py  howler_jy.py  test_howler.py
06_wc/: Makefile  test_wc.py  wc.py
