[project]
name = "boring-stuff"
version = "0.1.0"
description = "Exercices livre Tiny Python Projects"
readme = "README.md"
authors = [{name = "JYM"}]
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.2",
    "requests",
]

[tool.uv]
managed = true

[tool.pytest.ini_options]
addopts = "--ignore=livre_tiny_python_projects"
testpaths = ["."]

[tool.pyright]
include = ["."]
exclude = [".venv", "**/__pycache__"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["A", "E", "F", "W", "D", "I", "UP", "B"]
ignore = ["D100", "D202", "D205", "D212", "D400", "D401", "D403", "D415"]

[tool.ruff.lint.pydocstyle]
convention = "google"
